# revo-auth

./: .editorconfig  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  biome.json  deny.toml  package.json  pnpm-lock.yaml  revo-auth-nuclear-prompt.md  turbo.json
.changeset/: config.json
.github/workflows/: ci.yml  release.yml  security.yml
apps/docs/: astro.config.mjs  package.json
apps/docs/src/styles/: docs.css  tokens.css
apps/server/: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md  fly.toml
apps/server/migrations/: 0001_init.sql  0002_passkeys.sql  0003_orgs.sql  0004_audit.sql  0005_magic_links.sql  0006_verification_metadata.sql
apps/server/src/: config.rs  error.rs  lib.rs  main.rs  state.rs  telemetry.rs  webauthn.rs
apps/server/src/crypto/: hkdf.rs  jwt.rs  mod.rs  password.rs  tokens.rs
apps/server/src/db/: accounts.rs  apps.rs  audit.rs  magic_links.rs  memberships.rs  mod.rs  orgs.rs  passkeys.rs  sessions.rs  totp.rs  users.rs  verification.rs
apps/server/src/email/: mod.rs  transport.rs
apps/server/src/email/templates/: invite.rs  magic.rs  mod.rs  reset.rs  verify.rs
apps/server/src/middleware/: auth.rs  csrf.rs  mod.rs  rate_limit.rs  request_id.rs  tenant.rs
apps/server/src/providers/: apple.rs  discord.rs  github.rs  google.rs  microsoft.rs  mod.rs
apps/server/src/resources/: common_passwords.txt
apps/server/src/routes/: health.rs  mod.rs
apps/server/src/routes/admin/: apps.rs  mod.rs  users.rs
apps/server/src/routes/v1/: account.rs  email.rs  magic.rs  mod.rs  oauth.rs  org.rs  passkey.rs  password.rs  session.rs  signin.rs  signout.rs  signup.rs  totp.rs
apps/server/tests/: magic_link.rs  oauth_google.rs  passkey.rs  rate_limit.rs  signup_signin.rs  tenant_isolation.rs  totp.rs
apps/server/tests/common/: mod.rs
examples/sveltekit-demo/: .env.example  README.md  auth.config.ts  package.json  playwright.config.ts  tsconfig.json
examples/sveltekit-demo/src/: app.css  app.d.ts  app.html  hooks.server.ts
(+50 files in other folders)
