[package]
name = "revo-auth-server"
version = "0.1.0"
edition = "2021"
license = "MIT"
default-run = "revo-auth-server"

[[bin]]
name = "revo-auth-server"
path = "src/main.rs"

[lib]
name = "revo_auth_server"
path = "src/lib.rs"

[dependencies]
axum = { version = "0.8", features = ["macros", "multipart"] }
axum-extra = { version = "0.10", features = ["cookie", "typed-header"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip", "request-id", "util"] }
tower_governor = "0.8"
governor = "0.10"
hyper = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "migrate"] }
argon2 = "0.5"
ring = "0.17"
rand = "0.9"
jsonwebtoken = "9"
oauth2 = "5"
webauthn-rs = "0.5"
totp-rs = { version = "5", features = ["serde_support", "otpauth"] }
fred = { version = "9", features = ["enable-rustls", "tracing"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
garde = { version = "0.22", features = ["derive", "email"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
figment = { version = "0.10", features = ["env", "toml"] }
base64 = "0.22"
subtle = "2"
hex = "0.4"
hmac = "0.12"
sha2 = "0.10"
aes-gcm = "0.10"
hkdf = "0.12"
url = "2"
urlencoding = "2"
http = "1"
async-trait = "0.1"
regex = "1"
once_cell = "1"
dashmap = "6"
http-body-util = "0.1"
bytes = "1"

[dev-dependencies]
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres", "redis"] }
wiremock = "0.6"
serial_test = "3"
tower = "0.5"
hyper-util = { version = "0.1", features = ["client-legacy", "http1", "tokio"] }
